syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "Vector.proto";

message HomeNpcData {
	uint32 avatar_id = 1;
	Vector spawn_pos = 2;
	Vector spawn_rot = 3;
	uint32 costume_id = 4;
}
